--- a/app/styles/_flags/tjk.scss
+++ b/app/styles/_flags/tjk.scss
@@ -2,4 +2,23 @@
 // http://www.crwflags.com/fotw/flags/tj.html
 @mixin flag-tjk() {
   @include ratio(2 / 3);
+  $unit: $height / 280;
+  $green: #060;
+  $white: #FFF;
+  $red: #c00;
+  $yellow: #f8c300;
+  $stripe-small-height: 80 * $unit;
+  $stripe-big-height: 120 * $unit;
+  $symbol-size: 120 * $unit;
+
+  @include lines(
+                  $green, $stripe-small-height,
+                  $white, $stripe-big-height,
+                  $red, $stripe-small-height
+                );
+  // TODO: Need to re-export the symbol, including the stars
+  // Or add the stars in CSS only
+  &:before {
+    @include centered-symbol($UTF8_COUNTRY_TJK, $yellow, $symbol-size);
+  }
 };
