--- a/app/styles/_helpers/symbols.scss
+++ b/app/styles/_helpers/symbols.scss
@@ -1,5 +1,11 @@
 $UTF8_BLACK_STAR: '\2605';
 
+$UTF8_COUNTRY_KGZ: '\e633 ';
+$UTF8_COUNTRY_LBN: '\e632 ';
+$UTF8_COUNTRY_LSO: '\e631 ';
+$UTF8_COUNTRY_MAC: '\e630 ';
+$UTF8_COUNTRY_MWI: '\e629 ';
+$UTF8_COUNTRY_TWN: '\e628 ';
 $UTF8_COUNTRY_EGY: '\e627 ';
 $UTF8_COUNTRY_IRQ: '\e626 ';
 $IRAN_SYMBOL: '\e625 ';
