--- a/app/styles/_helpers/symbols.scss
+++ b/app/styles/_helpers/symbols.scss
@@ -1,5 +1,6 @@
 $UTF8_BLACK_STAR: '\2605';
 
+$UTF8_COUNTRY_KOR: '\e634 ';
 $UTF8_COUNTRY_KGZ: '\e633 ';
 $UTF8_COUNTRY_LBN: '\e632 ';
 $UTF8_COUNTRY_LSO: '\e631 ';
