Add new symbols

--- a/app/styles/_helpers/symbols.scss
+++ b/app/styles/_helpers/symbols.scss
@@ -1,5 +1,9 @@
 $UTF8_BLACK_STAR: '\2605';
 
+$UTF8_COUNTRY_NRU: '\e638 ';
+$UTF8_COUNTRY_MHL: '\e637 ';
+$UTF8_COUNTRY_MNG: '\e636 ';
+$UTF8_COUNTRY_NFK: '\e635 ';
 $UTF8_COUNTRY_KOR: '\e634 ';
 $UTF8_COUNTRY_KGZ: '\e633 ';
 $UTF8_COUNTRY_LBN: '\e632 ';
