--- a/app/styles/_helpers/symbols.scss
+++ b/app/styles/_helpers/symbols.scss
@@ -11,6 +11,7 @@ $UTF8_COUNTRY_LSO: '\e631 ';
 $UTF8_COUNTRY_MAC: '\e630 ';
 $UTF8_COUNTRY_MWI: '\e629 ';
 $UTF8_COUNTRY_TWN: '\e628 ';
+$UTF8_COUNTRY_NAM: $UTF8_COUNTRY_TWN;
 $UTF8_COUNTRY_EGY: '\e627 ';
 $UTF8_COUNTRY_IRQ: '\e626 ';
 $IRAN_SYMBOL: '\e625 ';
