--- a/app/styles/_helpers/symbols.scss
+++ b/app/styles/_helpers/symbols.scss
@@ -1,5 +1,7 @@
 $UTF8_BLACK_STAR: '\2605';
 
+$UTF8_COUNTRY_NCL: '\e640 ';
+$UTF8_COUNTRY_MTQ: '\e639 ';
 $UTF8_COUNTRY_NRU: '\e638 ';
 $UTF8_COUNTRY_MHL: '\e637 ';
 $UTF8_COUNTRY_MNG: '\e636 ';
